# T2-PF-2023

./: .gitignore  README.md  T2-PF2023.cabal  hangman.hs  words.txt
app/: hangman.hs
