cabal-version:      2.4
name:               T2-PF2023
version:            0.1.0.0

synopsis: Implementation of a hangman game for the Functional Programming class.

author:             Ricardo Süffert
maintainer:         ricardobsuffert@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

executable hangman
    main-is:          hangman.hs
    build-depends:    
        base >=4.16.4.0,
        random,
        split
    hs-source-dirs:   app
    default-language: Haskell2010